[Clean] Update link and remove beta status as app is released

--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
                         <img src="assets/PetCheckAI.svg" alt="Pet Check AI" class="app-icon">
                         <div class="app-info">
                             <h2>Pet Check AI</h2>
-                            <span class="app-status status-beta">Beta</span>
+                            <span class="app-status status-released">Released</span>
                         </div>
                     </div>
                     <p class="app-description">
                         AI-powered health assessments for your pets, available 24/7. Get instant guidance on pet health concerns, prepare for vet visits, and build confidence in caring for your furry family members.
                     </p>
                     <div class="app-links">
-                        <span class="app-link link-disabled">App Store Soon</span>
+                        <a href="https://apps.apple.com/app/pet-check-ai/id6749246922" class="app-link link-appstore" target="_blank" rel="noopener">App Store</a>
                         <a href="https://testflight.apple.com/join/WVaABmKn" class="app-link link-beta" target="_blank" rel="noopener">TestFlight</a>
                         <a href="https://petcheckai.com" class="app-link link-website" target="_blank" rel="noopener">Website</a>
                     </div>
